--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
     --dark: #404A3D;
 }
 
+.form-control{
+    font-size: 0.90rem;
+}
+
+.form-control:focus{
+    box-shadow: none;
+}
+
 .back-to-top {
     position: fixed;
     display: none;
@@ -90,6 +98,17 @@
     transition: .5s;
 }
 
+.nav-link, .nav-link:hover, a:hover{
+    color:black;
+    font-family: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
+    font-weight: 900;
+}
+
+.opt-nav{
+    font-weight: bold;
+}
+
+
 .navbar .navbar-nav .nav-link {
     margin-right: 35px;
     padding: 25px 0;
@@ -99,10 +118,10 @@
     outline: none;
 }
 
-.navbar .navbar-nav .nav-link:hover,
+/* .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
-}
+} */
 
 .navbar .dropdown-toggle::after {
     border: none;
@@ -111,6 +130,14 @@
     font-weight: 900;
     vertical-align: middle;
     margin-left: 8px;
+}
+
+@media (min-width: 1200px) {
+    h2{
+        font-size: 1.9rem;
+        font-family: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
+        font-weight: 900;
+    }
 }
 
 @media (max-width: 991.98px) {
