Our Products Change

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@
     z-index: 1;
 }
 
-.service-item .service-img::after {
+/* .service-item .service-img::after {
     position: absolute;
     content: "";
     width: 100%;
@@ -334,7 +334,7 @@
     background: #FFFFFF;
     transition: .5s ease-out;
     z-index: 2;
-}
+} */
 
 .service-item:hover .service-img::after {
     width: 0;
