--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,48 @@
     --dark: #404A3D;
 }
 
+body{
+    font-family: var(--bs-body-font-family);
+}
+
+.btn-custom-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 1rem;
+    width: 0.5em;
+    height: 0.5rem;
+    
+}
+
+.cart-item {
+    position: relative;
+    border: 1px solid #eee;
+    border-radius: 8px;
+}
+
+.cart-item:hover {
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+
+.position-relative {    
+    position: relative;
+}
+
+.count-popout {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
 .form-control{
-    font-size: 0.75rem;
+    font-size: 0.85rem;
 }
 
 .form-control:focus{
@@ -103,8 +143,11 @@
 }
 
 .header{
-    font-family: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
-    font-weight: 900;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: white;
 }
 
 .opt-nav{
@@ -137,9 +180,7 @@
 
 @media (min-width: 1200px) {
     h2{
-        font-size: 1.9rem;
-        font-family: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
-        font-weight: 900;
+        font-size: 1.7rem;
     }
 }
 
