header proper spacing

--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,18 @@ body{
 
 .count-popout {
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -5px;
+    right: -5px;
     background-color: red;
     color: white;
     border-radius: 50%;
     padding: 2px 6px;
     font-size: 12px;
     font-weight: bold;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .form-control{
@@ -151,7 +155,8 @@ body{
 }
 
 .opt-nav{
-    font-weight: bold;
+    padding-left: 3rem;
+    /* font-weight: bold; */
 }
 
 
