--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -123,7 +123,7 @@ body {
 }
 .dropdown-toggle {
     white-space: nowrap;
-    margin-top: -5px;
+    /* margin-top: -5px; */
     color: black;
 }
 .order-review-section {
