--- a/css/main.css
+++ b/css/main.css
@@ -211,18 +211,24 @@ body {
 /* Main */
 .main {
   display: flex;
-  gap: 125px;
+  gap: 65px;
   min-height: 570px;
   align-items: center;
   padding: 0 50px;
 }
 
 /* Image gallery */
-.gallery {
+/* .gallery {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 30px;
+} */
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 5px; /* Reduce spacing between elements */
 }
 
 .gallery .main-img img {
