--- a/css/prod.css
+++ b/css/prod.css
@@ -256,21 +256,21 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #f9f9f9;
   padding: 20px;
-}
+} */
 
-header {
+/* header {
   color: #fff;
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-}
+} */
 
 header nav {
   display: flex;
