--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,16 @@ body{
       opacity: 1;
     }
 }
+@media (max-width: 768px) {
+    .notification-toast {
+      display: none !important; /* Hide toast in mobile view */
+    }
+  }
+
+
+
+
+
   
 /*** Testimonial ***/
 .testimonial-img {
@@ -735,4 +745,21 @@ body{
     color: var(--light);
     letter-spacing: 1px;
     box-shadow: none;
+}
+
+
+.view-all-icon {
+    display: inline-block;
+    text-decoration: none;
+}
+
+.view-all-img {
+    width: 35px; /* Adjust as needed */
+    height: auto;
+    transition: transform 0.2s ease, opacity 0.3s ease;
+}
+
+.view-all-img:hover {
+    transform: scale(1.1); /* Slight zoom effect on hover */
+    opacity: 0.8; /* Reduce opacity slightly */
 }
