--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /********** Template CSS **********/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --primary: #7e0c0c;
     --secondary: #b4dbe8;
@@ -145,6 +146,10 @@ body{
     
 } */
 .header {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
     position: fixed;
     top: 0;
     width: 100%;
@@ -158,7 +163,7 @@ body{
   }
   
   .opt-nav {
-    padding-left: 3rem;
+    padding-left: 1rem;
   }
   
   .navbar .navbar-nav .nav-link {
