--- a/css/main.css
+++ b/css/main.css
@@ -288,7 +288,7 @@ body {
   height: 100vh;
   width: 100vw;
   z-index: 10;
-  background: var(--black-with-opacity);
+  /* background: var(--black-with-opacity); */
   align-items: center;
   justify-content: center;
 }
